added picture for the 404 error

--- a/public/style.css
+++ b/public/style.css
@@ -1,34 +1,59 @@
-body{
+body {
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
 }
-main{
-  background-color:lightgray ;
+
+img {
+  width: 100%;
+  height: auto;
+}
+#errorpage {
+  color: green;
+  margin-top: 25vh;
+}
+
+
+#errorpage h1 {
+  margin: 0 auto;
+}
+
+#bedo {
+  width: 30%;
+  height: auto;
+  margin: 0 auto;
+}
+
+main {
+  background-color: lightgray;
   padding: 1em 2em 0 2em;
   height: 100vh;
   width: 80vw;
   margin: 0 auto;
 }
-.info{
+
+.info {
   padding: .5em;
   margin: .5em;
-  margin-bottom: 1em ;
+  margin-bottom: 1em;
   border: 1px solid black;
   border-radius: 6px;
 }
-.big{
+
+.big {
   font-size: 20px;
   font-weight: bold;
 }
-#toshow{
+
+#toshow {
   background-color: white;
   padding: 1em;
   border-radius: 5px;
   box-shadow: 2px 2px #888888;
 }
-footer{
+
+footer {
   display: flex;
   flex: 1 0 auto;
 }
