solver a mistake in aboutblank pageagain

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
     <h1>Wiki: How to use it</h1>
     <h3>API for an Online Shop</h3>
     <p class="big">How to enter:</p>
-    <p>Address to DataBase is: <a href="http://"<%= serverIP %>":3000/database/" target="_blank">http://<%= serverIP %>:3000/database/</a></p>
-    <p>Address to Categories: <a href="http://"<%= serverIP %>":3000/categories/" target="_blank">http://<%= serverIP %>:3000/categories/</a></p>
+    <p>Address to DataBase is: <a href="http://<%= serverIP %>:3000/database/" target="_blank">http://<%= serverIP %>:3000/database/</a></p>
+    <p>Address to Categories: <a href="http://<%= serverIP %>:3000/categories/" target="_blank">http://<%= serverIP %>:3000/categories/</a></p>
     <div class="info">
       <p class="big">What info I got from Categories:</p>
       <p id="toshow">
