--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,17 @@
     <h1>Wiki: How to use it</h1>
     <h3>API for an Online Shop</h3>
     <div class="info">
-      <p class="big"><a href="http://<%= serverIP %>:9090/status" target="_blank">Check <%= hostName %> Status</a></p>
+      <p class="big"><a href="http://<%= serverIP %>:9090/status">Check <%= hostName %> Status</a></p>
     </div>
-    <p class="big">How to enter:</p>
+    <p class="big">Options:</p>
     <p>Address to DataBase is: <a href="http://<%= serverIP %>:9090/api/products/" target="_blank">http://<%= serverIP %>:9090/api/products/</a></p>
     <p>Address to Categories: <a href="http://<%= serverIP %>:9090/api/categories/" target="_blank">http://<%= serverIP %>:9090/api/categories/</a></p>
+    <p>Address to Active Customers: <a href="http://<%= serverIP %>:9090/api/activecustomers/" target="_blank">http://<%= serverIP %>:9090/api/activecustomers/</a></p>
+    <p>Address to Select a customer with specific userID (/:userid should be replaced by a real user id): <a href="#">http://<%= serverIP %>:9090/api/customers/:userid/</a></p>
+    <p>Address to Activate a customer with specific userID (/:userid should be replaced by a real user id): <a href="#"">http://<%= serverIP %>:9090/api/activate/:userid/</a></p>
+    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
+    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
+    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
     <div class="info">
       <p class="big">What info I got from Categories:</p>
       <p id="toshow">
@@ -55,8 +61,9 @@
     </footer>
   </main>
   <script type="text/javascript">
-    const serverIP = '<%= serverIP %>';
-    localStorage.setItem('serverIP', serverIP);
+  const serverIP = '<%= serverIP %>';
+  localStorage.setItem('serverIP', serverIP);
+
   </script>
 </body>
 
