--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,53 +11,12 @@
 
 <body>
   <main>
-    <h1>Wiki: How to use it</h1>
-    <h3>API for an Online Shop</h3>
+    <h1>API to Check Server Status</h1>
     <div class="info">
       <p class="big"><a href="http://<%= serverIP %>:9090/status">Check <%= hostName %> Status</a></p>
     </div>
-    <p class="big">Options:</p>
-    <p>Address to DataBase is: <a href="http://<%= serverIP %>:9090/api/products/" target="_blank">http://<%= serverIP %>:9090/api/products/</a></p>
-    <p>Address to Categories: <a href="http://<%= serverIP %>:9090/api/categories/" target="_blank">http://<%= serverIP %>:9090/api/categories/</a></p>
-    <p>Address to Active Customers: <a href="http://<%= serverIP %>:9090/api/activecustomers/" target="_blank">http://<%= serverIP %>:9090/api/activecustomers/</a></p>
-    <p>Address to Select a customer with specific userID (/:userid should be replaced by a real user id): <a href="#">http://<%= serverIP %>:9090/api/customers/:userid/</a></p>
-    <p>Address to Activate a customer with specific userID (/:userid should be replaced by a real user id): <a href="#"">http://<%= serverIP %>:9090/api/activate/:userid/</a></p>
-    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
-    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
-    <p>Address to Payment Methods: <a href="http://<%= serverIP %>:9090/api/payment_methods/" target="_blank">http://<%= serverIP %>:9090/api/payment_methods/</a></p>
-    <div class="info">
-      <p class="big">What info I got from Categories:</p>
-      <p id="toshow">
-        "id": 0,
-        <br>"name": "PC",
-        <br>"picture":"https://#",
-        <br>"description":"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi"
-      </p>
-      <li>id: --> a unique category number</li>
-      <li>name: --> name of the category</li>
-      <li>picture: --> a super amazing pict of the category</li>
-      <li>description: --> description of the category</li>
-    </div>
-    <div class="info">
-      <p class="big">What info I got from DataBase:</p>
-      <p id="toshow">
-        "id": 10,
-        <br> "name": "HP Probook 3100",
-        <br> "price": 650,
-        <br> "category_id": 1,
-        <br> "picture": "https://#",
-        <br> "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-      </p>
-      <li>id: --> a unique number</li>
-      <li>name: --> name of the product</li>
-      <li>price: --> product price</li>
-      <li>category_id: --> id where the item belongs</li>
-      <li>picture: --> a super amazing pict of the product</li>
-      <li>description: --> a random text from wikipedia</li>
-      <li>highlight: --> if its in ofer or so</li>
-    </div>
-    <footer id="myfooter">
-      <p>Server Proudly developed by <a target="_blank" href="https://github.com/NachoMerino">NachoMerino</a>.</p>
+    <footer>
+      <p>Developed with 💙 in Berlin by <a href="https://github.com/NachoMerino/API-Server-ExpressJS">Nacho Merino</a>.</p>
     </footer>
   </main>
   <script type="text/javascript">
